--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 </head>
 
 <body>
+  <div class="quote-container">
+    <h1>Quote of the day</h1>
+    <div class="quote-info">
+      <p class="quote-text jsQuoteText">"We read the world wrong and say that it deceives us."</p>
+      <p class="quote-author"><span class="author-dash">&mdash;</span class="jsQuoteAuthor">Adam Whitehouse</p>
+    </div>
+    <div class="btn-container">
+      <button class="new-quote jsNewQuote">New Quote</button>
+      <button class="tweet jsTweet"><i class="fa-brands fa-twitter"></i>Tweet</button>
+    </div>
+  </div>
   <script src="./script.js"></script>
 </body>
 
