can cyclle through array of quotes and display quote data on page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <div class="quote-container">
     <h1>Quote of the day</h1>
     <div class="quote-info">
-      <p class="quote-text jsQuoteText">"We read the world wrong and say that it deceives us."</p>
-      <p class="quote-author"><span class="author-dash">&mdash;</span class="jsQuoteAuthor">Adam Whitehouse</p>
+      <p class="quote-text jsQuoteText"></p>
+      <p class="quote-author"><span class="author-dash">&mdash;</span><span class="jsQuoteAuthor"></span></p>
     </div>
     <div class="btn-container">
       <button class="new-quote jsNewQuote">New Quote</button>
