added method 2 using quotes api and added tweet function

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <div class="quote-container">
     <h1>Quote of the day</h1>
     <div class="quote-info">
-      <p class="quote-text jsQuoteText"></p>
-      <p class="quote-author"><span class="author-dash">&mdash;</span><span class="jsQuoteAuthor"></span></p>
+      <blockquote class="quote-text jsQuoteText"></blockquote>
+      <p class="quote-author jsQuoteAuthor"></p>
     </div>
     <div class="btn-container">
       <button class="new-quote jsNewQuote">New Quote</button>
